Landing page--correción del pie | creación de agora-frameWork

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -43,8 +43,10 @@ head
 
 	//Landing Page
 	link(rel="stylesheet" href="css/agora-landingPage.css")
-
-
+	
+	//Framework Agora
+	link(rel="stylesheet" href="css/agora-frameWork.css")
+	
 
 body
 	
