Plataforma--Estilos a Tarjeta | Creación de agora--frameWork.css

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -66,7 +66,9 @@ body
 				li: a(href="#gotoAgora"): i.icon-go.icono--menu
 				li: a(href="#equipo"): i.icon-equipo.icono--menu
 		div.menuNavegacionVertical__back
-			a(href="#inicio"): i.icon-back.icono--back(src="images/back.svg")
+			a(href="#inicio"): i.icon-back.icono--back
+
+			
 
 	nav.menuNavegacionApaisado
 		div: i.icon-a
