--- a/index.jade
+++ b/index.jade
@@ -41,17 +41,17 @@ head
 	//Normalize
 	link(href="css/normalize.css" rel="stylesheet")
 
-	//Landing Page
-	link(rel="stylesheet" href="css/agora-landingPage.css")
-
 	//Agora Style
-	link(rel="stylesheet" href="css/agora_style.css")
+	link(rel="stylesheet" href="css/agora-style.css")
 
 	//Style Modal
 	link(rel="stylesheet" href="css/modal.css")
 
 	//Agora FrameWork
 	link(rel="stylesheet" href="css/agora-frameWork.css")
+
+	//Agora Media Queris
+	link(rel="stylesheet" href="css/agora-mediaQueries.css")
 
 	
 
