--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -44,8 +44,14 @@ head
 	//Landing Page
 	link(rel="stylesheet" href="css/agora-landingPage.css")
 	
+	//Landing Page
+	link(rel="stylesheet" href="css/agora-style.css")
+
 	//Framework Agora
 	link(rel="stylesheet" href="css/agora-frameWork.css")
+
+	//Agora Media Queris
+	link(rel="stylesheet" href="css/agora-mediaQueries.css")
 	
 
 body
