--- a/css/agora-style.css
+++ b/css/agora-style.css
@@ -9,10 +9,57 @@
 
 /*////////////////  MENU  ////////////////*/
 
+.menuNavegacionVertical {
+	position: fixed;
+	right: 0;
+	width: 3rem;
+	height: 100vh;
+	padding: 1rem 0 .5rem 0;
+	flex-flow: column;
+	justify-content: space-between;
+	align-items: center;
+	background-color: var(--blanco);
+	color: var(--profundo);	
+	text-align: center;
+	border-left: 1px var(--claro) solid;
+}
+
+.menuNavegacionVertical--ul {
+	list-style: none;
+	padding: 0;
+}
+
+.menuNavegacionVertical--ul li {
+	margin: 1rem 0;
+}
+
+.icono--menu, .icono--back  {
+	color: var(--profundo);
+	width: 2rem;
+}
+
+.icono--menu:focus, .icono--menu:hover {
+	color: var(--anaranjado);
+}
+
+.icono--back:focus, .icono--back:hover {
+	font-weight: 500;
+	color: var(--anaranjado);
+
+}
+
 .menuNavegacionApaisado {
+	position: fixed;
+	width: 100%;
+	height: 2rem;
+	padding: 0 1rem;
+	justify-content: space-between;
+	align-items: center;
 	background-color: var(--blanco);
 	color: var(--blanco);
+	z-index: 8;	
 	border-bottom: 1px solid var(--ahuesado);
+	top: 0;
 }
 
 /*////////////////   TARJETAS  ////////////////*/
@@ -99,121 +146,6 @@
 }
 
 
-
-
-/*////////////////  PIE  ////////////////*/
-
-
-
-/*////////////////  MEDIA QUERIS COLUMNAS ////////////////*/
-		
-	/*@media (max-width:575px) xs*/
-		.contenedorTarjetasEventos{
-			width: 100%;
-		    height: calc(100vh - 2rem);
-		    position: absolute;
-		    margin: 0;
-		    left: 0;
-		    bottom: 0;
-		    padding: 1rem;
-		}
-
-		.columnaTarjetas {
-			-webkit-column-count:2;
-			-moz-column-count:2;
-			column-count:2;
-			-webkit-column-gap:.5rem;
-			-moz-column-gap:.5rem;
-			column-gap:.5rem;
-		}
-
-		.tarjeta {
-			display:inline-block;
-			width:100%
-		}
-		
-		.imagen-fluida {
-		  max-width: 100%;
-		  height: auto;
-		}
-
-	@media (min-width:576px) /*sm*/ {
-		
-		.columnaTarjetas {
-			-webkit-column-count:3;
-			-moz-column-count:3;
-			column-count:3;
-			-webkit-column-gap:.5rem;
-			-moz-column-gap:.5rem;
-			column-gap:.5rem;
-		}
-
-		.tarjeta {
-			display:inline-block;
-			width:100%
-		}
-
-  	}
-
-	@media (min-width:768px) /*md*/ {
-		.contenedorTarjetasEventos{
-			width: calc(100% - 3rem);
-		    height: 100vh;
-		    position: absolute;
-		    margin: 0;
-		    left: 0;
-		    bottom: initial;
-		    padding: 1rem;
-		}
-
-		.columnaTarjetas {
-			-webkit-column-count:4;
-			-moz-column-count:4;
-			column-count:4;
-			-webkit-column-gap:.5rem;
-			-moz-column-gap:.5rem;
-			column-gap:.5rem;
-		}
-
-		.tarjeta {
-			display:inline-block;
-			width:100%
-		}
-
-	}
-
-	@media (min-width:992px) /*lg*/ {
-		.columnaTarjetas {
-			-webkit-column-count:4;
-			-moz-column-count:4;
-			column-count:4;
-			-webkit-column-gap:.75rem;
-			-moz-column-gap:.75rem;
-			column-gap:.75rem;
-		}
-		
-		.tarjeta {
-			display:inline-block;
-			width:100%
-		}
-	}
-
-	@media (min-width:1200px) /*xl*/ {
-
-		.columnaTarjetas {
-			-webkit-column-count:5;
-			-moz-column-count:5;
-			column-count:5;
-			-webkit-column-gap: 1rem;
-			-moz-column-gap: 1rem;
-			column-gap: 1rem;
-		}
-		
-		.tarjeta {
-			display:inline-block;
-			width:100%
-		}
-	}
 
 /*////////////////  ANIMACIONES ////////////////*/
 
