--- a/index.jade
+++ b/index.jade
@@ -91,15 +91,79 @@ body
 						img.imagen__evento.imagen-fluida(src="images/1.jpg")
 
 					div.tarjeta__informacion
-						p.tipoEvento Exposición
-						P.tituloEvento Este Es el que Trabaja 
+						p.tipoEvento Convocatoria
+						P.tituloEvento Programa Nacional de Teatro Escolar Veracruz 2017 
 						p
-							span.fechaEvento 29 Oct 2016 
-							small &middot
-							span.horaEvento 19:00 hrs
-						p.sedeEvento La Pergola
+							span.fechaEvento 7 Jul 2017
 						div.organizadorEvento
 							img.organizadorEvento__imgPerfil.imagen-fluida(src="images/luna.png")
-							div.organizadorEvento__nombre Aula Clavijero
+							div.organizadorEvento__nombre Instituto Veracruzano de Cultura | IVEC
 
-			
+			div.tarjeta
+				div.tarjeta__contenedor
+					div.tarjeta__imagen
+						img.imagen__evento.imagen-fluida(src="images/2.jpg")
+
+					div.tarjeta__informacion
+						p.tipoEvento Feria
+						P.tituloEvento Feria Nacional del Libro Infantil y Juvenil 2017 
+						p
+							span.fechaEvento 21 Jul 2017 
+							small &middot 
+							span.horaEvento 10:00 hrs
+						p.sedeEvento Colegio Preparatorio de Xalapa
+						div.organizadorEvento
+							img.organizadorEvento__imgPerfil.imagen-fluida(src="images/luna.png")
+							div.organizadorEvento__nombre Instituto Veracruzano de Cultura | IVEC
+
+			div.tarjeta
+				div.tarjeta__contenedor
+					div.tarjeta__imagen
+						img.imagen__evento.imagen-fluida(src="images/3.jpg")
+
+					div.tarjeta__informacion
+						p.tipoEvento Curso
+						P.tituloEvento Curso de verano en parque Natura
+						p
+							span.fechaEvento 17 Jul 2017 
+							small &middot 
+							span.horaEvento 9:00 hrs
+						p.sedeEvento Parque Natura
+						div.organizadorEvento
+							img.organizadorEvento__imgPerfil.imagen-fluida(src="images/luna.png")
+							div.organizadorEvento__nombre Candaana Viajes y Campamentos
+
+			div.tarjeta
+				div.tarjeta__contenedor
+					div.tarjeta__imagen
+						img.imagen__evento.imagen-fluida(src="images/4.jpg")
+
+					div.tarjeta__informacion
+						p.tipoEvento Curso
+						P.tituloEvento Mis vacaciones en la Biblioteca
+						p
+							span.fechaEvento 24 Jul 2017 
+							small &middot 
+							span.horaEvento 8:00 hrs
+						div.organizadorEvento
+							img.organizadorEvento__imgPerfil.imagen-fluida(src="images/luna.png")
+							div.organizadorEvento__nombre Dirección de Cultura, Educación y Deporte Xalapa
+
+			div.tarjeta
+				div.tarjeta__contenedor
+					div.tarjeta__imagen
+						img.imagen__evento.imagen-fluida(src="images/5.jpg")
+
+					div.tarjeta__informacion
+						p.tipoEvento Ciclo de Cine
+						P.tituloEvento 62 Muestra Internacional de Cine
+						p
+							span.fechaEvento 24 Jul 2017 
+							small &middot 
+							span.horaEvento 17:00 hrs
+						p.sedeEvento Ágora de la Ciudad
+						div.organizadorEvento
+							img.organizadorEvento__imgPerfil.imagen-fluida(src="images/luna.png")
+							div.organizadorEvento__nombre Instituto Veracruzano de Cultura | IVEC
+
+						
