Plataforma--Se modifico estilos de tarjeta [fechaEvento, horaEvento] | Margin top de contenedorTarjetasEventos

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -196,10 +196,10 @@ body
 	section#equipo.equipo.flexBox__Row
 		div.equipo__perfil
 			div.equipo__imagen
-			h3.weight300 Ramsés
+			h3.weight300 Desarrolladora(o)
 			p.weight300 Reseña
 			div.equipo__tags
-				div.tag Phyton
+				div.tag CSS
 				div.tag Data Base
 
 		div.equipo__perfil
