--- a/css/agora-style.css
+++ b/css/agora-style.css
@@ -98,7 +98,7 @@
 	font-size: 60%;
 	color: var(--tenue);
 	text-align: right;
-	margin: .5rem .5rem 0 0rem;
+	margin: .5rem 0 0 0;
 }
 
 .tituloEvento{
@@ -112,7 +112,6 @@
 }
 
 .fechaEvento, .horaEvento, .sedeEvento{
-	font-size: 70%;
 	font-weight: 300;
 	line-height: 1;
 }
