--- a/index.jade
+++ b/index.jade
@@ -108,8 +108,8 @@ body
 						p.tipoEvento Feria
 						P.tituloEvento Feria Nacional del Libro Infantil y Juvenil 2017 
 						p
-							span.fechaEvento 21 Jul 2017 
-							small &middot 
+							span.fechaEvento 21 Jul 2017
+							small.punto &nbsp &middot &nbsp 
 							span.horaEvento 10:00 hrs
 						p.sedeEvento Colegio Preparatorio de Xalapa
 						div.organizadorEvento
@@ -125,8 +125,8 @@ body
 						p.tipoEvento Curso
 						P.tituloEvento Curso de verano en parque Natura
 						p
-							span.fechaEvento 17 Jul 2017 
-							small &middot 
+							span.fechaEvento 17 Jul 2017
+							small.punto &nbsp &middot &nbsp 
 							span.horaEvento 9:00 hrs
 						p.sedeEvento Parque Natura
 						div.organizadorEvento
@@ -142,8 +142,8 @@ body
 						p.tipoEvento Curso
 						P.tituloEvento Mis vacaciones en la Biblioteca
 						p
-							span.fechaEvento 24 Jul 2017 
-							small &middot 
+							span.fechaEvento 24 Jul 2017
+							small.punto &nbsp &middot &nbsp 
 							span.horaEvento 8:00 hrs
 						div.organizadorEvento
 							img.organizadorEvento__imgPerfil.imagen-fluida(src="images/luna.png")
@@ -158,8 +158,8 @@ body
 						p.tipoEvento Ciclo de Cine
 						P.tituloEvento 62 Muestra Internacional de Cine
 						p
-							span.fechaEvento 24 Jul 2017 
-							small &middot 
+							span.fechaEvento 24 Jul 2017
+							small.punto &nbsp &middot &nbsp
 							span.horaEvento 17:00 hrs
 						p.sedeEvento Ágora de la Ciudad
 						div.organizadorEvento
